# colonoscopy-workflow-1

./: README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: transcription_route.py  triage_route.py
app/api/routes/: triage_route.py
app/clients/: llm_clients.py
app/db/: init_db.py  session.py
app/db/models/: case.py  colonoscopy_models.py  test_case.py
app/services/: transcription_services.py  triage_services.py
app/services/parsing/triage/: colonoscopy_triage_model.py
app/services/transcribe/: colonoscopy_transcription_model.py  extraction_prompt.yaml  transcription_prompt.yaml
app/services/triage/: colonoscopy_triage_model.py  extract_json.yaml
tests/: conftest.py  test_api_triage.py  test_db.py  test_triage_service.py
tests/api/: test_api_triage.py
tests/db/: test_db.py
tests/services/: test_triage_service.py
